--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ theme = "hugo-elate-theme"
   # Hero section
   [params.hero]
     title = "Dun Rite Games"
-    subtitle = 'Spelled wrong, but Done Right!'
+    subtitle = 'Spelled wrong, but <span style="color: #9900ff; font-weight: bold">Done Right!</span>'
 
   # Intro section
   # Available icons: http://simplelineicons.com/
@@ -71,7 +71,7 @@ theme = "hugo-elate-theme"
     img = "img_10.jpg"
 
   [params.intro.video]
-    enable = true
+    enable = false
     title = "Watch the video"
     icon = "icon-play2"
     url = "https://vimeo.com/channels/staffpicks/93951774"
@@ -122,7 +122,7 @@ theme = "hugo-elate-theme"
 
   # Testimonials section
   [params.testimonials]
-    enable = true
+    enable = false
     title = "Testimonials"
     description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts."
 
@@ -179,10 +179,10 @@ theme = "hugo-elate-theme"
     description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts."
 
     [[params.about.item]]
-      name = "Jean Smith"
-      position = "Web Designer"
+      name = "Manuel Otheo"
+      position = "Technical Director"
       description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts"
-      img = "person1.jpg"
+      img = "ManuelToon.png"
       alt = "Person1"
       social = [
         ["icon-twitter", "#"],
@@ -191,10 +191,10 @@ theme = "hugo-elate-theme"
       ]
 
     [[params.about.item]]
-      name = "Rob Smith"
-      position = "Web Developer"
+      name = "Angel Revuelta"
+      position = "Art Director "
       description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts"
-      img = "person2.jpg"
+      img = "AngelToon.png"
       alt = "Person2"
       social = [
         ["icon-twitter", "#"],
@@ -203,8 +203,8 @@ theme = "hugo-elate-theme"
       ]
 
     [[params.about.item]]
-      name = "Larry Ben"
-      position = "Web Designer"
+      name = "Felipe Perugachi"
+      position = "Gameplay Developer"
       description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts"
       img = "person3.jpg"
       alt = "Person3"
@@ -214,9 +214,21 @@ theme = "hugo-elate-theme"
         ["icon-dribbble", "#"]
       ]
 
+    [[params.about.item]]
+      name = "Raúl Báez"
+      position = "Backend Engineer"
+      description = "Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts"
+      img = "RaulToon.png"
+      alt = "Person3"
+      social = [
+        ["icon-twitter", "#"],
+        ["icon-facebook", "#"],
+        ["icon-dribbble", "#"]
+      ]
+
   # Counters section
   [params.counters]
-    enable = true
+    enable = false
     title = "Stats"
     background = "full_image_1.jpg"
 
